ui: add navigation hints for D-Pad and IME
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_detail_fragment.xml
@@ -62,6 +62,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
+                        android:nextFocusDown="@id/interface_name_text"
+                        android:nextFocusForward="@id/interface_name_text"
                         app:checked="@{tunnel.state == State.UP}"
                         app:layout_constraintBaseline_toBaselineOf="@+id/interface_title"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -83,6 +85,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/name"
+                        android:nextFocusUp="@id/tunnel_switch"
+                        android:nextFocusDown="@id/public_key_text"
+                        android:nextFocusForward="@id/public_key_text"
                         android:onClick="@{ClipboardUtils::copyTextView}"
                         android:text="@{tunnel.name}"
                         app:layout_constraintStart_toStartOf="parent"
@@ -107,6 +112,9 @@
                         android:contentDescription="@string/public_key"
                         android:ellipsize="end"
                         android:maxLines="1"
+                        android:nextFocusUp="@id/interface_name_text"
+                        android:nextFocusDown="@id/addresses_text"
+                        android:nextFocusForward="@id/addresses_text"
                         android:onClick="@{ClipboardUtils::copyTextView}"
                         android:singleLine="true"
                         android:text="@{config.interface.keyPair.publicKey.toBase64}"
@@ -131,6 +139,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/addresses"
+                        android:nextFocusUp="@id/public_key_text"
+                        android:nextFocusDown="@id/dns_servers_text"
+                        android:nextFocusForward="@id/dns_servers_text"
                         android:onClick="@{ClipboardUtils::copyTextView}"
                         android:text="@{config.interface.addresses}"
                         android:visibility="@{config.interface.addresses.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
@@ -155,6 +166,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/dns_servers"
+                        android:nextFocusUp="@id/addresses_text"
+                        android:nextFocusDown="@id/listen_port_text"
+                        android:nextFocusForward="@id/listen_port_text"
                         android:onClick="@{ClipboardUtils::copyTextView}"
                         android:text="@{config.interface.dnsServers}"
                         android:visibility="@{config.interface.dnsServers.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
@@ -181,6 +195,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/listen_port"
+                        android:nextFocusRight="@id/mtu_text"
+                        android:nextFocusUp="@id/dns_servers_text"
+                        android:nextFocusDown="@id/applications_text"
+                        android:nextFocusForward="@id/mtu_text"
                         android:onClick="@{ClipboardUtils::copyTextView}"
                         android:text="@{config.interface.listenPort}"
                         android:visibility="@{!config.interface.listenPort.isPresent() ? android.view.View.GONE : android.view.View.VISIBLE}"
@@ -210,6 +228,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/mtu"
+                        android:nextFocusLeft="@id/listen_port_text"
+                        android:nextFocusUp="@id/dns_servers_text"
+                        android:nextFocusForward="@id/applications_text"
                         android:onClick="@{ClipboardUtils::copyTextView}"
                         android:text="@{config.interface.mtu}"
                         android:visibility="@{!config.interface.mtu.isPresent() ? android.view.View.GONE : android.view.View.VISIBLE}"
@@ -237,6 +258,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/applications"
+                        android:nextFocusUp="@id/mtu_text"
+                        android:nextFocusDown="@id/peers_layout"
+                        android:nextFocusForward="@id/peers_layout"
                         android:onClick="@{ClipboardUtils::copyTextView}"
                         android:text="@{config.interface.includedApplications.isEmpty() ? @plurals/n_excluded_applications(config.interface.excludedApplications.size(), config.interface.excludedApplications.size()) : @plurals/n_included_applications(config.interface.includedApplications.size(), config.interface.includedApplications.size())}"
                         android:visibility="@{config.interface.includedApplications.isEmpty() &amp;&amp; config.interface.excludedApplications.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
