--- a/ui/src/main/res/layout/tunnel_detail_peer.xml
+++ b/ui/src/main/res/layout/tunnel_detail_peer.xml
@@ -48,6 +48,8 @@
                 android:contentDescription="@string/public_key"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:nextFocusDown="@id/pre_shared_key_text"
+                android:nextFocusForward="@id/pre_shared_key_text"
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:singleLine="true"
                 android:text="@{item.publicKey.toBase64}"
@@ -74,6 +76,9 @@
                 android:contentDescription="@string/pre_shared_key"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:nextFocusUp="@id/public_key_text"
+                android:nextFocusDown="@id/allowed_ips_text"
+                android:nextFocusForward="@id/allowed_ips_text"
                 android:singleLine="true"
                 android:text="@string/pre_shared_key_enabled"
                 android:visibility="@{!item.preSharedKey.isPresent() ? android.view.View.GONE : android.view.View.VISIBLE}"
@@ -98,6 +103,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/allowed_ips"
+                android:nextFocusUp="@id/pre_shared_key_text"
+                android:nextFocusDown="@id/endpoint_text"
+                android:nextFocusForward="@id/endpoint_text"
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:text="@{item.allowedIps}"
                 android:visibility="@{item.allowedIps.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
@@ -122,6 +130,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/endpoint"
+                android:nextFocusUp="@id/allowed_ips_text"
+                android:nextFocusDown="@id/persistent_keepalive_text"
+                android:nextFocusForward="@id/persistent_keepalive_text"
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:text="@{item.endpoint}"
                 android:visibility="@{!item.endpoint.isPresent() ? android.view.View.GONE : android.view.View.VISIBLE}"
@@ -146,6 +157,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/persistent_keepalive"
+                android:nextFocusUp="@id/endpoint_text"
+                android:nextFocusDown="@id/transfer_text"
+                android:nextFocusForward="@id/transfer_text"
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:text="@{@plurals/persistent_keepalive_seconds_unit(item.persistentKeepalive.orElse(0), item.persistentKeepalive.orElse(0))}"
                 android:visibility="@{!item.persistentKeepalive.isPresent() ? android.view.View.GONE : android.view.View.VISIBLE}"
@@ -173,6 +187,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/transfer_label"
                 android:contentDescription="@string/transfer"
+                android:nextFocusUp="@id/persistent_keepalive_text"
                 android:onClick="@{ClipboardUtils::copyTextView}"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
