--- a/ui/src/main/res/layout/config_naming_dialog_fragment.xml
+++ b/ui/src/main/res/layout/config_naming_dialog_fragment.xml
@@ -22,6 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/tunnel_name"
+                android:imeOptions="actionDone"
                 android:inputType="textNoSuggestions|textVisiblePassword"
                 app:filter="@{NameInputFilter.newInstance()}" />
 
