--- a/ui/src/main/res/values/tv_colors.xml
+++ b/ui/src/main/res/values/tv_colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="tv_primary_color">#ff212121</color>
     <color name="tv_card_background">@color/tv_primary_color</color>
+    <color name="tv_card_delete_background">#b00020</color>
 </resources>
