--- a/ui/src/main/res/layout/tv_activity.xml
+++ b/ui/src/main/res/layout/tv_activity.xml
@@ -9,16 +9,30 @@
 
         <import type="com.wireguard.android.model.ObservableTunnel" />
 
+        <import type="com.wireguard.android.activity.TvMainActivity.KeyedFile" />
+
         <variable
             name="isDeleting"
             type="androidx.databinding.ObservableBoolean" />
+
+        <variable
+            name="files"
+            type="com.wireguard.android.databinding.ObservableKeyedArrayList&lt;String, KeyedFile&gt;" />
+
+        <variable
+            name="filesRoot"
+            type="androidx.databinding.ObservableField&lt;String&gt;" />
 
         <variable
             name="tunnels"
             type="com.wireguard.android.databinding.ObservableKeyedArrayList&lt;String, ObservableTunnel&gt;" />
 
         <variable
-            name="rowConfigurationHandler"
+            name="tunnelRowConfigurationHandler"
+            type="com.wireguard.android.databinding.ObservableKeyedRecyclerViewAdapter.RowConfigurationHandler" />
+
+        <variable
+            name="filesRowConfigurationHandler"
             type="com.wireguard.android.databinding.ObservableKeyedRecyclerViewAdapter.RowConfigurationHandler" />
     </data>
 
@@ -54,8 +68,8 @@
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:orientation="horizontal"
-            android:visibility="@{tunnels.isEmpty() ? View.GONE : View.VISIBLE}"
-            app:configurationHandler="@{rowConfigurationHandler}"
+            android:visibility="@{(tunnels.isEmpty || !filesRoot.isEmpty) ? View.GONE : View.VISIBLE}"
+            app:configurationHandler="@{tunnelRowConfigurationHandler}"
             app:items="@{tunnels}"
             app:layout="@{@layout/tv_tunnel_list_item}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
@@ -67,12 +81,44 @@
             tools:listitem="@layout/tv_tunnel_list_item" />
 
         <TextView
+            android:id="@+id/files_root_label"
+            style="@style/TextAppearance.MaterialComponents.Headline5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="8dp"
+            android:text="@{filesRoot}"
+            android:visibility="@{filesRoot.isEmpty ? View.GONE : View.VISIBLE}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/banner_logo"
+            tools:visibility="gone" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/files_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="16dp"
+            android:orientation="horizontal"
+            android:visibility="@{filesRoot.isEmpty ? View.GONE : View.VISIBLE}"
+            app:configurationHandler="@{filesRowConfigurationHandler}"
+            app:items="@{files}"
+            app:layout="@{@layout/tv_file_list_item}"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toTopOf="@id/import_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/files_root_label"
+            app:spanCount="5"
+            tools:itemCount="10"
+            tools:listitem="@layout/tv_file_list_item"
+            tools:visibility="gone" />
+
+        <TextView
             style="@style/TextAppearance.MaterialComponents.Headline4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/tv_add_tunnel_get_started"
-            android:visibility="@{tunnels.isEmpty() ? View.VISIBLE : View.GONE}"
+            android:visibility="@{(filesRoot.isEmpty &amp;&amp; tunnels.isEmpty) ? View.VISIBLE : View.GONE}"
             app:layout_constraintBottom_toTopOf="@id/delete_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +133,7 @@
             android:layout_margin="16dp"
             android:minWidth="0dp"
             android:visibility="@{isDeleting ? View.GONE : View.VISIBLE}"
-            app:icon="@drawable/ic_action_add_white"
+            app:icon="@{filesRoot.isEmpty ? @drawable/ic_action_add_white : @drawable/ic_arrow_back}"
             app:iconPadding="0dp"
             app:iconTint="?attr/colorOnPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -100,7 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:minWidth="0dp"
-            android:visibility="@{tunnels.isEmpty &amp;&amp; !isDeleting ? View.GONE : View.VISIBLE}"
+            android:visibility="@{((tunnels.isEmpty &amp;&amp; !isDeleting) || !filesRoot.isEmpty) ? View.GONE : View.VISIBLE}"
             app:icon="@{isDeleting ? @drawable/ic_arrow_back : @drawable/ic_action_delete}"
             app:iconPadding="0dp"
             app:iconTint="?attr/colorOnPrimary"
