--- a/ui/src/main/res/values-v27/styles.xml
+++ b/ui/src/main/res/values-v27/styles.xml
@@ -1,29 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight">
-        <item name="colorPrimary">@color/primary_color</item>
-        <item name="colorOnPrimary">@color/color_control_normal</item>
-        <item name="colorPrimaryDark">@color/primary_color</item>
-        <item name="colorPrimaryVariant">@color/primary_light_color</item>
-        <item name="colorSecondary">@color/secondary_color</item>
-        <item name="colorOnSecondary">@color/secondary_text_color</item>
-        <item name="colorSurface">@color/primary_color</item>
-        <item name="colorOnSurface">@color/color_control_normal</item>
-        <item name="colorBackground">@color/primary_color</item>
-        <item name="colorControlNormal">@color/color_control_normal</item>
-        <item name="colorMultiselectActiveBackground">@color/list_multiselect_background</item>
-        <item name="elevationOverlayColor">@color/primary_light_color</item>
-        <item name="elevationOverlayEnabled">true</item>
-        <item name="android:colorBackground">@color/primary_color</item>
+    <style name="AppTheme" parent="WireGuardTheme">
         <item name="android:navigationBarColor">@color/navigation_bar_color</item>
-        <item name="android:statusBarColor">@color/status_bar_color</item>
         <item name="android:windowLightNavigationBar">@bool/light_navigation_bar</item>
         <item name="android:windowLightStatusBar">@bool/light_status_bar</item>
-        <item name="android:windowBackground">@color/primary_color</item>
-        <item name="alertDialogTheme">@style/AppTheme.Dialog</item>
-        <item name="materialAlertDialogTheme">@style/AppTheme.Dialog</item>
-        <item name="textInputStyle">@style/TextInputLayoutBase</item>
-        <item name="materialCardViewStyle">@style/AppTheme.MaterialCardView</item>
     </style>
 </resources>
