--- a/ui/src/main/res/layout/tunnel_detail_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_detail_fragment.xml
@@ -167,14 +167,41 @@
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/dns_servers"
                         android:nextFocusUp="@id/addresses_text"
-                        android:nextFocusDown="@id/listen_port_text"
-                        android:nextFocusForward="@id/listen_port_text"
+                        android:nextFocusDown="@id/dns_search_domains_text"
+                        android:nextFocusForward="@id/dns_search_domains_text"
                         android:onClick="@{ClipboardUtils::copyTextView}"
                         android:text="@{config.interface.dnsServers}"
                         android:visibility="@{config.interface.dnsServers.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/dns_servers_label"
                         tools:text="8.8.8.8, 8.8.4.4" />
+
+                    <TextView
+                        android:id="@+id/dns_search_domains_label"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:labelFor="@+id/dns_search_domain_text"
+                        android:text="@string/dns_search_domains"
+                        android:visibility="@{config.interface.dnsSearchDomains.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/dns_servers_text" />
+
+                    <TextView
+                        android:id="@+id/dns_search_domains_text"
+                        style="@style/DetailText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/dns_search_domains"
+                        android:nextFocusUp="@id/dns_servers_text"
+                        android:nextFocusDown="@id/listen_port_text"
+                        android:nextFocusForward="@id/listen_port_text"
+                        android:onClick="@{ClipboardUtils::copyTextView}"
+                        android:text="@{config.interface.dnsSearchDomains}"
+                        android:visibility="@{config.interface.dnsSearchDomains.isEmpty() ? android.view.View.GONE : android.view.View.VISIBLE}"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/dns_search_domains_label"
+                        tools:text="zx2c4.com" />
 
                     <TextView
                         android:id="@+id/listen_port_label"
@@ -187,7 +214,7 @@
                         app:layout_constraintEnd_toStartOf="@id/mtu_label"
                         app:layout_constraintHorizontal_weight="0.5"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/dns_servers_text" />
+                        app:layout_constraintTop_toBottomOf="@id/dns_search_domains_text" />
 
                     <TextView
                         android:id="@+id/listen_port_text"
@@ -196,7 +223,7 @@
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/listen_port"
                         android:nextFocusRight="@id/mtu_text"
-                        android:nextFocusUp="@id/dns_servers_text"
+                        android:nextFocusUp="@id/dns_search_domains_text"
                         android:nextFocusDown="@id/applications_text"
                         android:nextFocusForward="@id/mtu_text"
                         android:onClick="@{ClipboardUtils::copyTextView}"
@@ -220,7 +247,7 @@
                         app:layout_constraintHorizontal_weight="0.5"
                         app:layout_constraintLeft_toRightOf="@id/listen_port_label"
                         app:layout_constraintStart_toEndOf="@id/listen_port_label"
-                        app:layout_constraintTop_toBottomOf="@id/dns_servers_text" />
+                        app:layout_constraintTop_toBottomOf="@id/dns_search_domains_text" />
 
                     <TextView
                         android:id="@+id/mtu_text"
