ui: add margin on empty list text
Signed-off-by: Marcel Joss <marceljoss@hotmail.ch>
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/src/main/res/layout/tunnel_list_fragment.xml
+++ b/ui/src/main/res/layout/tunnel_list_fragment.xml
@@ -60,6 +60,8 @@
                 android:src="@mipmap/ic_launcher" />
 
             <TextView
+                android:layout_marginStart="@dimen/tunnel_list_placeholder_margin"
+                android:layout_marginEnd="@dimen/tunnel_list_placeholder_margin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
