--- a/ui/src/main/res/xml/app_restrictions.xml
+++ b/ui/src/main/res/xml/app_restrictions.xml
@@ -9,5 +9,6 @@
         android:description="@string/disable_config_export_description"
         android:key="disable_config_export"
         android:restrictionType="bool"
-        android:title="@string/disable_config_export_title" />
+        android:title="@string/disable_config_export_title"
+		android:singleLineTitle="false" />
 </restrictions>
