ui: normalise icon tints and remove unused drawable
Signed-off-by: Harsh Shandilya <me@msfjarvis.dev>

--- a/ui/src/main/res/layout/add_tunnels_bottom_sheet.xml
+++ b/ui/src/main/res/layout/add_tunnels_bottom_sheet.xml
@@ -20,7 +20,7 @@
         android:text="@string/create_from_file"
         android:textAlignment="viewStart"
         android:textColor="?attr/colorOnSurface"
-        app:icon="@drawable/ic_action_open_white"
+        app:icon="@drawable/ic_action_open"
         app:iconPadding="@dimen/bottom_sheet_icon_padding"
         app:iconTint="?attr/colorSecondary"
         app:layout_constraintBottom_toTopOf="@+id/create_from_qrcode"
@@ -44,7 +44,7 @@
         android:text="@string/create_from_qr_code"
         android:textAlignment="viewStart"
         android:textColor="?attr/colorOnSurface"
-        app:icon="@drawable/ic_action_scan_qr_code_white"
+        app:icon="@drawable/ic_action_scan_qr_code"
         app:iconPadding="@dimen/bottom_sheet_icon_padding"
         app:iconTint="?attr/colorSecondary"
         app:layout_constraintBottom_toBottomOf="@+id/create_empty"
