Now using `colorSecondary` to match the design of the switch next to.
Also, `colorOnPrimary` was "white" on my physical device (Samsung S21 API 31) and blended into the background, but looked fine in emulator (API29). I did not investigate further.
The above should look the same as the ToggleSwitch next to it.

As far as I could test this will look "secondary blue" on older devices, and adhere to Material You dynamic colors on newer devices.

--- a/ui/src/main/res/layout/tunnel_list_item.xml
+++ b/ui/src/main/res/layout/tunnel_list_item.xml
@@ -55,7 +55,7 @@
             android:layout_alignBaseline="@+id/tunnel_name"
             android:layout_toStartOf="@id/tunnel_switch"
             android:button="@drawable/ic_action_shortcut"
-            app:buttonTint="?attr/colorOnPrimary"
+            app:buttonTint="?attr/colorSecondary"
             android:checked="@{item.hasShortcut == true}"
             android:onCheckedChanged="@{fragment::setShortcutState}"
             android:nextFocusRight="@+id/tunnel_switch"
